(bugfix) investigate local build issues